--- a/Index.html
+++ b/Index.html
@@ -48,8 +48,6 @@
         </div>
     </div>
 
-
-
     <form action="#" id="frmLangKeys" style="margin:0;">
         <input type="hidden" id="hidLoadingLabel" value="Loading..."/>
         <input type="hidden" id="hidChooseLabel" value="Choose"/>
@@ -61,9 +59,9 @@
         <input type="hidden" id="hidGameContentLoggedInPlayForReal" value=""/>   
     </form>
    
-    <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.9.3/TweenMax.min.js"></script>
-    <script type="text/javascript" src="static/steal/steal.js?garbo"></script>
-    <script type="text/javascript">
+    <script src="static/resources/greensock/TweenMax.js"></script>
+    <script src="static/steal/steal.js?garbo"></script>
+    <script>
         <!--//<![CDATA[
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-19825106-1']);
