Added responsive support

--- a/html/index.html
+++ b/html/index.html
@@ -3,12 +3,15 @@
     <head>
         <title>Garbo</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="css/layout.css" />
-        <link rel="stylesheet" href="css/tablet.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <link rel="stylesheet" href="css/reset.css" media="screen" />
+        <link rel="stylesheet" href="css/layout.css" media="screen" />
+        <link rel="stylesheet" href="css/mobile.css" media="screen" />
+        <link rel="stylesheet" href="css/tablet.css" media="screen" />
     </head>
     <body>
         <div id="wrapper">
-            <a id="logo"><img alt='Garbo' src='images/logo.png' /></a>
+            <a href="#" id="logo"><img alt='Garbo' src='images/logo.png' /></a>
             <div class="page">
                 <div id="category-1" class="category">
                     <div class="category-description-container">
@@ -36,6 +39,7 @@
         <script src='../Static/resources/greensock/TweenMax.js'></script>
         <script src='../Static/resources/greensock/jquery.gsap.js'></script>
         <script src='../Static/resources/jquery.isotope.js'></script>
+        <script src='../Static/resources/jquery.masonry.js'></script>
         <script src='../Static/resources/jquery.touchSwipe.js'></script>
         <script src='js/scripts.js'></script>
 
