--- a/html/index.html
+++ b/html/index.html
@@ -26,13 +26,13 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>            
             <nav id="sidebar"></nav>
             <nav id="footer">
-                <a href="#">OM GARBO</a>
-                <a href="#">OM GARBO</a>
-                <a href="#">OM GARBO</a>
-                <a href="#">OM GARBO</a>
+                <a href="#">Om Garbo</a>
+                <a href="#">Affiliate</a>
+                <a href="#">Sakert Spel</a>
+                <a href="#">Kontakt</a>
             </nav>
         </div>
         <script src='js/jquery-1.9.1.min.js'></script>
