--- a/html/index.html
+++ b/html/index.html
@@ -26,8 +26,11 @@
                         </div>
                     </div>
                 </div>
-            </div>            
-            <nav id="sidebar"></nav>
+            </div>
+            <div id="sidebar">
+                <nav id="sidebar-menu"></nav>
+                <div id="sidebar-hidemenu"></div>
+            </div>
             <nav id="footer">
                 <a href="#">Om Garbo</a>
                 <a href="#">Affiliate</a>
