--- a/html/index.html
+++ b/html/index.html
@@ -42,8 +42,8 @@
         <script src='../Static/resources/greensock/TweenMax.js'></script>
         <script src='../Static/resources/greensock/jquery.gsap.js'></script>
         <script src='../Static/resources/jquery.isotope.js'></script>
-        <script src='../Static/resources/jquery.masonry.js'></script>
         <script src='../Static/resources/jquery.touchSwipe.js'></script>
+        <script src='js/jquery.transformMatrix.js'></script>
         <script src='js/scripts.js'></script>
 
     </body>
