Added responsive support

--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="games-container">
                         <div class="games">
-
+                            
                         </div>
                     </div>
                 </div>
@@ -44,6 +44,7 @@
         <script src='../Static/resources/jquery.isotope.js'></script>
         <script src='../Static/resources/jquery.touchSwipe.js'></script>
         <script src='js/jquery.transformMatrix.js'></script>
+        <script src='js/jquery.mousewheel.js'></script>
         <script src='js/scripts.js'></script>
 
     </body>
