Added responsive support

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,9 @@
     <head>
         <title>Garbo</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
         <link rel="stylesheet" href="css/reset.css" media="screen" />
         <link rel="stylesheet" href="css/layout.css" media="screen" />
         <link rel="stylesheet" href="css/mobile.css" media="screen" />
@@ -14,15 +16,15 @@
             <a href="#" id="logo"><img alt='Garbo' src='images/logo.png' /></a>
             <div class="page">
                 <div id="category-1" class="category">
+                    <div class="games-container">
+                        <div class="games">
+                            
+                        </div>
+                    </div>
                     <div class="category-description-container">
                         <div class="category-description">
                             <h1>Resa & Aventyr</h1>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ut enim quis lectus pellentesque pharetra. Maecenas gravida massa vel lacus malesuada rutrum. Nullam cursus eleifend est ut suscipit. Proin sapien purus, elementum quis dictum quis, imperdiet et magna. Integer et felis dui.</p>
-                        </div>
-                    </div>
-                    <div class="games-container">
-                        <div class="games">
-                            
                         </div>
                     </div>
                 </div>
@@ -42,9 +44,10 @@
         <script src='../Static/resources/greensock/TweenMax.js'></script>
         <script src='../Static/resources/greensock/jquery.gsap.js'></script>
         <script src='../Static/resources/jquery.isotope.js'></script>
-        <script src='../Static/resources/jquery.touchSwipe.js'></script>
+        <script src='js/iscroll.js'></script>
+        <!--<script src='../Static/resources/jquery.touchSwipe.js'></script>-->
         <script src='js/jquery.transformMatrix.js'></script>
-        <script src='js/jquery.mousewheel.js'></script>
+        <!--<script src='js/jquery.mousewheel.js'></script>-->
         <script src='js/scripts.js'></script>
 
     </body>
