Structure set, basing styles on flat ui. Only working on web now.

--- a/User/MyAccount.html
+++ b/User/MyAccount.html
@@ -1,13 +1,10 @@
 <h1>My account</h1>
 
 <div id="myaccountHolder">
-    <div style="float:right;">
-        <h5 style="text-align:right;text-transform:none;">Balance <span id="MyAccountBalance"></span></h5>
-    </div>
     <ul class="nav nav-tabs">
-        <li class="active"><a href="#tabPersonalDetails" data-href="Account/PersonalDetails">Personal details</a></li>
-        <li><a href="#tabChangePassword" data-href="Account/ChangePassword">Change password</a></li>
-        <li><a href="#tabTransactions" data-href="Account/PlayerTransactions">Transaction history</a></li>
+        <li class="active"><a href="#tabPersonalDetails" data-href="/user/PersonalDetails.html">Personal details</a></li>
+        <li><a href="#tabChangePassword" data-href="/user/ChangePassword.html">Change password</a></li>
+        <li><a href="#tabTransactions" data-href="/user/Transactions.html">Transaction history</a></li>
     </ul>
     <div class="tab-content">
         <div id="tabPersonalDetails" class="tab-pane active">
