--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=1024, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="MobileOptimized" content="width">
     <meta name="HandheldFriendly" content="true">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -17,27 +17,37 @@
 <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
     <div id="wrapper">
         <header>
-        <nav id="navbar-user" class="navbar navbar-fixed-top" style="top:-130px;">
-            <div class="navbar-inner">
-                <a class="brand" href="#!">Garbo</a>
-                <ul class="nav" id="nav-section">
-                    <li>
-                        <a href="#!travel-and-adventure">Travel and ADventure</a>
-                    </li>
-                    <li>
-                        <a href="#!other-casino-category">Other Category</a>
-                    </li>
+            <nav class="iconbar" id="navbar-user">
+                <ul>
+                    <li class="logged-out"><a class="fui-lock user-login" href="#"></a></li>
+                    <li class="logged-out"><a class="fui-new user-register" href="#!register"></a></li>
+                    <li class="logged-in"><a class="fui-user user-myaccount" href="#!myaccount"></a></li>
+                    <li class="logged-in"><a class="fui-plus user-deposit" href="#!deposit"></a></li>
+                    <li><a class="fui-photo" href="#"></a></li>
+                    <li><a class="fui-heart" href="#"></a></li>
                 </ul>
-                <form action="#" class="navbar-form form-inline pull-right">
-                    <div class="pull-right logged-out" style="text-align:right;margin-top:10px;position:relative;">
-                        <a href="#!register" class="btn btn-min-length btn-mini btn-info link-register">Register <i class="icon-user"></i></a><br />
-                        <a href="#!login" class="btn btn-min-length btn-mini link-login">Login <i class="icon-angle-right"></i></a><br />
-                    </div>
-                </form>
-            </div>
-        </nav>
+            </nav>
         </header>
         
+        <div class="login-form">
+            <form action="/login" method="POST">
+                <fieldset>
+                    <div class="control-group">
+                        <input type="text" class="login-field" value="" placeholder="Enter your name" id="login-name">
+                        <label class="login-field-icon fui-user" for="login-name"></label>
+                    </div>
+
+                    <div class="control-group">
+                        <input type="password" class="login-field" value="" placeholder="Password" id="login-pass">
+                        <label class="login-field-icon fui-lock" for="login-pass"></label>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary btn-large btn-block">Login</button>
+                    <a class="login-link link-forgotten-password" href="#">Lost your password?</a>
+                </fieldset>
+            </form>
+        </div>
+
         
         <div id="page">
             <div id="page-start" class="page" data-destroy="false">
@@ -47,6 +57,8 @@
             <div id="page-other-category" class="page" data-destroy="false" style="display:none;"></div>
         </div>
     </div>
+
+
 
     <form action="#" id="frmLangKeys" style="margin:0;">
         <input type="hidden" id="hidLoadingLabel" value="Loading..."/>
@@ -59,9 +71,9 @@
         <input type="hidden" id="hidGameContentLoggedInPlayForReal" value=""/>   
     </form>
    
-    <script src="static/resources/greensock/TweenMax.js"></script>
-    <script src="static/steal/steal.js?garbo"></script>
-    <script>
+    <script src="Static/resources/greensock/TweenMax.js"></script>
+    <script type="text/javascript" src="static/steal/steal.js?garbo"></script>
+    <script type="text/javascript">
         <!--//<![CDATA[
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-19825106-1']);
