Updates to faked ajax-calls (fixtures). Need to run the project through a web server to work.

--- a/Deposit/Depositmethods.html
+++ b/Deposit/Depositmethods.html
@@ -1,5 +1,10 @@
 <h1>Deposit</h1>
+<div class="slide">
+    <div id="deposit-holder">
 
-<div id="deposit-holder">
-
+    </div>
 </div>
+
+<script>
+    new Gb.Deposit('#deposit-holder');
+</script>
