--- a/User/ChangePassword.html
+++ b/User/ChangePassword.html
@@ -3,3 +3,24 @@
 HTML for controller User.Changepassword, inherits Core.Form
 Less/Css is found in /Static/Garbo/User/login
 -->
+
+<form class="form-vertical row" action="#" id="frmChangePassword">
+    <fieldset class="span4 offset2">
+        <div class="controls">
+            <input type="text" data-content="Enter your current password here" data-placement="right" placeholder="Current password" id="OldPassword" name="OldPassword" class="span4">
+        </div>
+        <div class="controls">
+            <input type="text" data-content="Type in your new password here" data-placement="right" placeholder="New password" id="NewPassword" name="NewPassword" class="span4">
+        </div>
+        <div class="controls">
+            <input type="text" data-content="Type in your new password again" data-placement="right" placeholder="Repeat new password" id="RepeatNewPassword" name="ConfirmPassword" class="span4">
+        </div>
+        <div class="controls-button span4">
+            <button type="submit" class="btn btn-info pull-right">Save changes</button>
+        </div>
+    </fieldset>
+</form>
+
+<script>
+    new Gb.Changepassword('#frmChangePassword')
+</script>
