--- a/User/PersonalDetails.html
+++ b/User/PersonalDetails.html
@@ -5,6 +5,7 @@ Less/Css specifics is found in /Static/Garbo/User/Personaldetails all other is t
 -->
 <form id="frmUpdatePersonalDetails" action="#" class="form-vertical">
     <fieldset>
+        <legend>Personal Details</legend>
         <div class="controls">
             <input disabled="disabled" class="disabled span6" id="Email" type="text" />
         </div>
@@ -25,8 +26,8 @@ Less/Css specifics is found in /Static/Garbo/User/Personaldetails all other is t
         
         <div class="controls">
             <select name="Country" id="Country">
-		    <option value="SE">Sweden</option>
-		</select>
+                <option value="SE">Sweden</option>
+            </select>
         </div>  
                    
         <div class="controls controls-row">
