--- a/html/index.html
+++ b/html/index.html
@@ -4,8 +4,8 @@
         <title>Garbo</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <link rel="stylesheet" href="css/reset.css" media="screen" />
         <link rel="stylesheet" href="css/layout.css" media="screen" />
         <link rel="stylesheet" href="css/mobile.css" media="screen" />
@@ -17,9 +17,7 @@
             <div class="page">
                 <div id="category-1" class="category">
                     <div class="games-container">
-                        <div class="games">
-                            
-                        </div>
+                        <div class="games"></div>
                     </div>
                     <div class="category-description-container">
                         <div class="category-description">
@@ -41,13 +39,8 @@
             </nav>
         </div>
         <script src='js/jquery-1.9.1.min.js'></script>
-        <script src='../Static/resources/greensock/TweenMax.js'></script>
-        <script src='../Static/resources/greensock/jquery.gsap.js'></script>
         <script src='../Static/resources/jquery.isotope.js'></script>
-        <script src='js/iscroll.js'></script>
-        <!--<script src='../Static/resources/jquery.touchSwipe.js'></script>-->
-        <script src='js/jquery.transformMatrix.js'></script>
-        <!--<script src='js/jquery.mousewheel.js'></script>-->
+        <script src='js/iscroll.js'></script>        
         <script src='js/scripts.js'></script>
 
     </body>
